2010-03-14  Kevin B. Kenny  <kennykb@acm.org>

	* configure.in: Removed all dependency on the native ODBC headers
	and import libraries. All ODBC references are now resolved at
	run time and contained in a 'fakesql.h' file. Removed references to
	Tk as well.
	* configure: autoconf-2.59
	* generic/fakesql.h (new file): Added file containing declarations
	of all ODBC API's used in this package, to avoid dependence on native
	headers.
	* generic/odbcStubsDefs.txt (new file): Declarations of functions
	imported from odbc32.dll using Tcl_LoadLibrary.
	* generic/odbcStubInit.c (new file): Code to load odbc32.dll and
	odbccp32.dll and initialize Stubs tables with the routines in them
	that are used in tdbc::odbc.
	* generic/odbcStubs.h (new file): Generated .h file with the Stubs
	structure defined in generic/odbcStubsDefs.txt.
	* tdbcodbc.c: Updated to use run-time-loaded ODBC libraries instead
	of associating to system headers at compile time and import libraries
	at link time. Revised handling of the '-parent' option so that the
	dependence on Tk is only at run time.
	
2009-09-29  Kevin B. Kenny  <kennykb@acm.org>

	* Makefile.in:		Changed 'test' rule to test all available
				database types.
	* tests/tdbcodbc.test:	Changed all TEST_* env vars to TDBCODBC_*
				for easier top-level scripting.  Clarified
				and expanded database type selection.
	* generic/tdbcodbc.c:   Replaced SQLSetConnectAttr with the obsolete
				SQLSetConnectOption, for better compatibility
				with older ODBC drivers.
	
2009-09-20  Kevin B. Kenny  <kennykb@acm.org>

	* README:
	* configure.in:		Advance version number to 1.0b13
	* configure:		autoconf-2.59
	
2009-07-02  Kevin B. Kenny  <kennykb@acm.org>

	* Makefile.in:		Added testing on SQL Server Express so that
	* generic/tdbcodbc.c: 	more functionality and data types can be
	* tests/tdbcodbc.test:	exposed.  Added code to force column names
				in result sets to be unique. 
	
	* library/tdbcodbc.tcl: Conditioned use of the IS_NULLABLE hack